--- a/index.html
+++ b/index.html
@@ -160,8 +160,11 @@ limitations under the License.
           <div class="dataset" title="Gaussian">
             <canvas class="data-thumbnail" data-dataset="gauss"></canvas>
           </div>
-          <div class="dataset" title="Spiral">
+          <!-- <div class="dataset" title="Spiral">
             <canvas class="data-thumbnail" data-dataset="spiral"></canvas>
+          </div> -->
+          <div class="dataset" title="Rocks">
+            <canvas class="data-thumbnail" data-dataset="rocks"></canvas>
           </div>
           <div class="dataset" title="Plane">
             <canvas class="data-thumbnail" data-regDataset="reg-plane"></canvas>
