--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@ limitations under the License.
         <div class="select">
           <select id="activations">
             <option value="relu">ReLU</option>
+            <option value="elu">ELU</option>
             <option value="tanh">Tanh</option>
             <option value="sigmoid">Sigmoid</option>
             <option value="linear">Linear</option>
