changing color theme

--- a/index.html
+++ b/index.html
@@ -288,9 +288,9 @@ limitations under the License.
           <svg width="150" height="30" id="colormap">
             <defs>
               <linearGradient id="gradient" x1="0%" y1="100%" x2="100%" y2="100%">
-                <stop offset="0%" stop-color="#f59322" stop-opacity="1"></stop>
+                <stop offset="0%" stop-color="#325396" stop-opacity="1"></stop>
                 <stop offset="50%" stop-color="#e8eaeb" stop-opacity="1"></stop>
-                <stop offset="100%" stop-color="#0877bd" stop-opacity="1"></stop>
+                <stop offset="100%" stop-color="#16afca" stop-opacity="1"></stop>
               </linearGradient>
             </defs>
             <g class="core" transform="translate(3, 0)">
