added leaky ReLU, changed some defaults, closes #6

--- a/index.html
+++ b/index.html
@@ -94,11 +94,12 @@ limitations under the License.
         <label for="activations">Activation</label>
         <div class="select">
           <select id="activations">
-            <option value="relu">ReLU</option>
-            <option value="elu">ELU</option>
-            <option value="tanh">Tanh</option>
-            <option value="sigmoid">Sigmoid</option>
             <option value="linear">Linear</option>
+            <option value="sigmoid">Sigmoid</option>
+            <option value="tanh">Tanh</option>
+            <option value="relu">ReLU</option>
+            <option value="leakyrelu">Leaky ReLU</option>
+            <option value="elu">ELU</option>
           </select>
         </div>
       </div>
