added linear and moons datasets

--- a/index.html
+++ b/index.html
@@ -145,7 +145,8 @@ limitations under the License.
   <!-- Main Part -->
   <div id="main-part" class="l--page">
 
-    <!--  Data Column-->
+    <!-- Data Column -->
+    <!-- Need even number of examples to keep spacing -->
     <div class="column data">
       <h4>
         <span>Data</span>
@@ -153,19 +154,28 @@ limitations under the License.
       <div class="ui-dataset">
         <p>Which dataset do you want to use?</p>
         <div class="dataset-list">
-          <div class="dataset" title="Circle">
-            <canvas class="data-thumbnail" data-dataset="circle"></canvas>
+          <div class="dataset" title="Linear">
+            <canvas class="data-thumbnail" data-dataset="linear"></canvas>
           </div>
           <div class="dataset" title="Exclusive or">
             <canvas class="data-thumbnail" data-dataset="xor"></canvas>
           </div>
+          <div class="dataset" title="Circle">
+            <canvas class="data-thumbnail" data-dataset="circle"></canvas>
+          </div>
+          <div class="dataset" title="Spiral">
+            <canvas class="data-thumbnail" data-dataset="spiral"></canvas>
+          </div>
           <div class="dataset" title="Gaussian">
             <canvas class="data-thumbnail" data-dataset="gauss"></canvas>
           </div>
-          <!-- <div class="dataset" title="Spiral">
-            <canvas class="data-thumbnail" data-dataset="spiral"></canvas>
-          </div> -->
-          <div class="dataset" title="Rocks">
+          <div class="dataset" title="Moons">
+            <canvas class="data-thumbnail" data-dataset="moons"></canvas>
+          </div>
+          <div class="dataset" title="Real data: sand vs shale">
+            <canvas class="data-thumbnail" data-dataset="rocks"></canvas>
+          </div>
+          <div class="dataset" title="Real data: sand vs shale">
             <canvas class="data-thumbnail" data-dataset="rocks"></canvas>
           </div>
           <div class="dataset" title="Plane">
