added swish activation

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@ limitations under the License.
             <option value="relu">ReLU</option>
             <option value="leakyrelu">Leaky ReLU</option>
             <option value="elu">ELU</option>
+            <option value="swish">Swish</option>
           </select>
         </div>
       </div>
