added new datasets

--- a/index.html
+++ b/index.html
@@ -158,8 +158,14 @@ limitations under the License.
           <div class="dataset" title="Linear">
             <canvas class="data-thumbnail" data-dataset="linear"></canvas>
           </div>
+          <div class="dataset" title="Diagonal">
+            <canvas class="data-thumbnail" data-dataset="diagonal"></canvas>
+          </div> 
           <div class="dataset" title="Exclusive or">
             <canvas class="data-thumbnail" data-dataset="xor"></canvas>
+          </div>
+          <div class="dataset" title="Gaussian">
+            <canvas class="data-thumbnail" data-dataset="gauss"></canvas>
           </div>
           <div class="dataset" title="Circle">
             <canvas class="data-thumbnail" data-dataset="circle"></canvas>
@@ -167,14 +173,8 @@ limitations under the License.
           <div class="dataset" title="Spiral">
             <canvas class="data-thumbnail" data-dataset="spiral"></canvas>
           </div>
-          <div class="dataset" title="Gaussian">
-            <canvas class="data-thumbnail" data-dataset="gauss"></canvas>
-          </div>
           <div class="dataset" title="Moons">
             <canvas class="data-thumbnail" data-dataset="moons"></canvas>
-          </div>
-          <div class="dataset" title="Real data: sand vs shale">
-            <canvas class="data-thumbnail" data-dataset="rocks"></canvas>
           </div>
           <div class="dataset" title="Real data: sand vs shale">
             <canvas class="data-thumbnail" data-dataset="rocks"></canvas>
@@ -184,6 +184,12 @@ limitations under the License.
           </div>
           <div class="dataset" title="Multi gaussian">
             <canvas class="data-thumbnail" data-regDataset="reg-gauss"></canvas>
+          </div>
+          <div class="dataset" title="Porosity">
+            <canvas class="data-thumbnail" data-regDataset="reg-porosity"></canvas>
+          </div>
+          <div class="dataset" title="Well log">
+            <canvas class="data-thumbnail" data-regDataset="reg-welllog"></canvas>
           </div>
         </div>
       </div>
@@ -352,7 +358,7 @@ limitations under the License.
       <h2>What Do All the Colors Mean?</h2>
       <p>Orange and blue are used throughout the visualization in slightly different ways, but in general orange shows negative values while blue shows positive values.</p>
       <p>The data points (represented by small circles) are initially colored orange or blue, which correspond to positive one and negative one.</p>
-      <p>In the hidden layers, the lines are colored by the weights of the connections between neurons. Blue shows a positive weight, which means the network is using that output of the neuron as given. An orange line shows that the network is assiging a negative weight.</p>
+      <p>In the hidden layers, the lines are colored by the weights of the connections between neurons. Blue shows a positive weight, which means the network is using that output of the neuron as given. An orange line shows that the network is assigning a negative weight.</p>
       <p>In the output layer, the dots are colored orange or blue depending on their original values. The background color shows what the network is predicting for a particular area. The intensity of the color shows how confident that prediction is.</p>
     </div>
 
