added another classification example

--- a/index.html
+++ b/index.html
@@ -155,6 +155,8 @@ limitations under the License.
       <div class="ui-dataset">
         <p>Which dataset do you want to use?</p>
         <div class="dataset-list">
+
+          <!-- Classification -->
           <div class="dataset" title="Linear">
             <canvas class="data-thumbnail" data-dataset="linear"></canvas>
           </div>
@@ -179,6 +181,14 @@ limitations under the License.
           <div class="dataset" title="Real data: sand vs shale">
             <canvas class="data-thumbnail" data-dataset="rocks"></canvas>
           </div>
+          <div class="dataset" title="Real data: poro-perm">
+            <canvas class="data-thumbnail" data-dataset="poroperm"></canvas>
+          </div>
+          <div class="dataset" title="Real data: poro-perm">
+            <canvas class="data-thumbnail" data-dataset="poroperm"></canvas>
+          </div>
+
+          <!-- Regression -->
           <div class="dataset" title="Plane">
             <canvas class="data-thumbnail" data-regDataset="reg-plane"></canvas>
           </div>
@@ -191,6 +201,7 @@ limitations under the License.
           <div class="dataset" title="Well log">
             <canvas class="data-thumbnail" data-regDataset="reg-welllog"></canvas>
           </div>
+
         </div>
       </div>
       <div>
