DTS from DTP example

--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@ limitations under the License.
           <div class="dataset" title="Porosity">
             <canvas class="data-thumbnail" data-regDataset="reg-porosity"></canvas>
           </div>
-          <div class="dataset" title="Well log">
-            <canvas class="data-thumbnail" data-regDataset="reg-welllog"></canvas>
+          <div class="dataset" title="DTS from DTP and RHOB">
+            <canvas class="data-thumbnail" data-regDataset="reg-dts"></canvas>
           </div>
 
         </div>
