--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ limitations under the License.
 
     <!-- Output Column -->
     <div class="column output">
-      <h4>Output</h4>
+      <h4>Dataset Name</h4>
       <div class="metrics">
         <div class="output-stats ui-percTrainData">
           <span>Test loss</span>
@@ -356,6 +356,34 @@ limitations under the License.
     <div class="l--body">
       <h2>Um, What Is a Neural Network?</h2>
       <p>It’s a technique for building a computer program that learns from data. It is based very loosely on how we think the human brain works. First, a collection of software “neurons” are created and connected together, allowing them to send messages to each other. Next, the network is asked to solve a problem, which it attempts to do over and over, each time strengthening the connections that lead to success and diminishing those that lead to failure. For a more detailed introduction to neural networks, Michael Nielsen’s <a href="http://neuralnetworksanddeeplearning.com/index.html">Neural Networks and Deep Learning</a> is a good place to start. For a more technical overview, try <a href="http://www.deeplearningbook.org/">Deep Learning</a> by Ian Goodfellow, Yoshua Bengio, and Aaron Courville.</p>
+    </div>
+
+    <div class="l--body">
+      <h2>Descriptions of datsets</h2>
+      <p>The data points are scaled and dimensionless, so it might be hard to tell what they represent. So here's a brief description.</p>
+      <p><strong>Classification</strong></p>
+      <p><strong>Linear</strong> – A data set that is linearly seperable along the X<sub>1</sub> dimension. So you'll only need one feature and one neuron to learn this relationship.</sub></p>
+      <p><strong>Diagonal</strong> – The two classes are clustered along a diagonal, so you'll need more than one feature to build an adequate classifier.</p>
+      <p><strong>Exclusive Or (XOR)</strong> – This is a classic problem in neural network research. It is the simplest non-linearly separable classification task that exists.</p>
+      <p><strong>Gaussian</strong> – A classification problem with clusters (or blobs) each represented by a Gaussian distribution. Change the noise level to broaden or narrow the distribution.</p>
+      <p><strong>Circle</strong> – A large circle of one class containing a smaller circle. A simple toy dataset to visualize clustering and classification algorithms.</p>
+      <p><strong>Spiral</strong> – Two classes spiraling around each other.</p>
+      <p><strong>Moons</strong> – Two interleaving half circles.</p>
+      <p><strong>Real data: sand vs. shale</strong> – This is an extract P-velocity (X<sub>1</sub>) and Density (X<sub>2</sub>) values for a selection of sandstones (cyan) and shales (dark blue) from the <a href="https://subsurfwiki.org/wiki/Rock_Property_Catalog">Rock Property Catalog</a>. A standard scalar has been applied to the features.</a></p>
+      <p><strong>Real data: porosity vs. permeability</strong> – Porosity, X<sub>1</sub> and the Logarithm of permeability, X<sub>2</sub> (log<sub>10</sub>) of Oligocene sandstones. Medium-to-coarse grained sands are in cyan, fine-to-medium grained sands are in dark blue. Dataset is modified from Taylor et al. 1993, Dataset number 64 in the <a href="https://pubs.usgs.gov/of/2003/ofr-03-420/ofr-03-420.html">USGS report 03-420</a> of Porosity and Permeability from Core Plugs in Siliclastic Rocks.</p>
+      <p><strong>Regression</strong></p>
+      <p><strong>Plane</strong> – Data coordinates sampling the a dipping planar surface.</p>
+      <p><strong>Multi-Gaussian</strong> – multiple clusters with guassian distributions.</p>
+      <p><strong>Porosity</strong> – <i>Needs a description</i></p>
+      <p><strong>DTS from DTP and RHOB</strong> – <i>Needs a description</i></p>
+      <div>
+      
+      </div>
+
+    </div>
+
+    <div class="dataset" title="Linear">
+      <canvas class="data-thumbnail" data-dataset="linear"></canvas>
     </div>
 
     <div class="l--body">
