Add file upload support

--- a/index.html
+++ b/index.html
@@ -204,6 +204,18 @@ limitations under the License.
 
         </div>
       </div>
+        <div class="ui-dataset">
+          <h4>
+            <span>CUSTOM</span>
+          </h4>
+          <div class="dataset-list">
+            <div class="dataset" title="Custom">
+              <canvas class="data-thumbnail" data-dataset="custom"></canvas>
+            </div>
+          </div>
+          <input type="file" id="files" name="files[]" multiple />
+          <output id="list"></output>
+      </div>
       <div>
         <div class="ui-percTrainData">
           <label for="percTrainData">Ratio of training to test data:&nbsp;&nbsp;<span class="value">XX</span>%</label>
