insert descriptions of datasets

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ limitations under the License.
 
     <!-- Output Column -->
     <div class="column output">
-      <h4>Dataset Name</h4>
+      <h4>Output</h4>
       <div class="metrics">
         <div class="output-stats ui-percTrainData">
           <span>Test loss</span>
@@ -359,7 +359,7 @@ limitations under the License.
     </div>
 
     <div class="l--body">
-      <h2>Descriptions of datsets</h2>
+      <h2>Descriptions of the datsets</h2>
       <p>The data points are scaled and dimensionless, so it might be hard to tell what they represent. So here's a brief description.</p>
       <p><strong>Classification</strong></p>
       <p><strong>Linear</strong> – A data set that is linearly seperable along the X<sub>1</sub> dimension. So you'll only need one feature and one neuron to learn this relationship.</sub></p>
@@ -373,9 +373,9 @@ limitations under the License.
       <p><strong>Real data: porosity vs. permeability</strong> – Porosity, X<sub>1</sub> and the Logarithm of permeability, X<sub>2</sub> (log<sub>10</sub>) of Oligocene sandstones. Medium-to-coarse grained sands are in cyan, fine-to-medium grained sands are in dark blue. Dataset is modified from Taylor et al. 1993, Dataset number 64 in the <a href="https://pubs.usgs.gov/of/2003/ofr-03-420/ofr-03-420.html">USGS report 03-420</a> of Porosity and Permeability from Core Plugs in Siliclastic Rocks.</p>
       <p><strong>Regression</strong></p>
       <p><strong>Plane</strong> – Data coordinates sampling the a dipping planar surface.</p>
-      <p><strong>Multi-Gaussian</strong> – multiple clusters with guassian distributions.</p>
-      <p><strong>Porosity</strong> – <i>Needs a description</i></p>
-      <p><strong>DTS from DTP and RHOB</strong> – <i>Needs a description</i></p>
+      <p><strong>Multi-Gaussian</strong> – multiple clusters with gaussian distributions.</p>
+      <p><strong>Real data: Porosity</strong> – This is a small dataset representing a porosity map. It is from Geoff Bohling at the Kansas Geological Survey, but we can no longer find the data online.</p>
+      <p><strong>Real data: DTS from DTP and RHOB</strong> – Predicting Shear sonic wireline measurements from compressional velocity (DTP), X<sub>1</sub>, and bulk density (RHOB), X<sub>2</sub>. Data has been downsampled from well R-39 offshore Nova Scotia, available from the <a href="https://www.cnsopb.ns.ca/">CNSOPB.</a></p>
       <div>
       
       </div>
