--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@ limitations under the License.
     <div class="l--body">
       <h2>Descriptions of the datsets</h2>
       <p>The data points are scaled and dimensionless, so it might be hard to tell what they represent. So here's a brief description.</p>
-      <p><strong>Classification</strong></p>
+      <p><strong>CLASSIFICATION</strong></p>
       <p><strong>Linear</strong> – A data set that is linearly seperable along the X<sub>1</sub> dimension. So you'll only need one feature and one neuron to learn this relationship.</sub></p>
       <p><strong>Diagonal</strong> – The two classes are clustered along a diagonal, so you'll need more than one feature to build an adequate classifier.</p>
       <p><strong>Exclusive Or (XOR)</strong> – This is a classic problem in neural network research. It is the simplest non-linearly separable classification task that exists.</p>
@@ -371,7 +371,7 @@ limitations under the License.
       <p><strong>Moons</strong> – Two interleaving half circles.</p>
       <p><strong>Real data: sand vs. shale</strong> – This is an extract P-velocity (X<sub>1</sub>) and Density (X<sub>2</sub>) values for a selection of sandstones (cyan) and shales (dark blue) from the <a href="https://subsurfwiki.org/wiki/Rock_Property_Catalog">Rock Property Catalog</a>. A standard scalar has been applied to the features.</a></p>
       <p><strong>Real data: porosity vs. permeability</strong> – Porosity, X<sub>1</sub> and the Logarithm of permeability, X<sub>2</sub> (log<sub>10</sub>) of Oligocene sandstones. Medium-to-coarse grained sands are in cyan, fine-to-medium grained sands are in dark blue. Dataset is modified from Taylor et al. 1993, Dataset number 64 in the <a href="https://pubs.usgs.gov/of/2003/ofr-03-420/ofr-03-420.html">USGS report 03-420</a> of Porosity and Permeability from Core Plugs in Siliclastic Rocks.</p>
-      <p><strong>Regression</strong></p>
+      <p><strong>REGRESSION</strong></p>
       <p><strong>Plane</strong> – Data coordinates sampling the a dipping planar surface.</p>
       <p><strong>Multi-Gaussian</strong> – multiple clusters with gaussian distributions.</p>
       <p><strong>Real data: Porosity</strong> – This is a small dataset representing a porosity map. It is from Geoff Bohling at the Kansas Geological Survey, but we can no longer find the data online.</p>
